// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={false}
    aria-haspopup="dialog"
    className="sc-fcCDYY Button__ButtonInner-dXfNcJ fgaYlh iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-fcCDYY Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ fvigv dpibyo AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render modal open 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={true}
    aria-haspopup="dialog"
    className="sc-fcCDYY Button__ButtonInner-dXfNcJ fgaYlh iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-fcCDYY Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ fvigv dpibyo AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      data-testid="AnimatePresence"
    >
      <div
        className="sc-fcCDYY jHNaXG Modal__ModalContainerInner-gRvBLO"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="sc-fcCDYY efbWLh Modal__ModalInner-fNGFsd"
          style={
            Object {
              "opacity": 0,
              "transform": "translateY(-20px) translateZ(0)",
            }
          }
        >
          <div
            className="sc-fcCDYY Flex___StyledAppBox-SiGEY jQzfsQ"
          >
            <div
              className="sc-fcCDYY Flex___StyledAppBox-SiGEY kxgMmz ModalHeader___StyledFlex-hKIJSk YmlkP"
            >
              <h2
                className="sc-fcCDYY kOXRjs"
              >
                delete-confirmation
              </h2>
            </div>
            <button
              className="sc-fcCDYY Button__ButtonInner-dXfNcJ jpkwXS iWxcUO"
              onClick={[Function]}
              type="button"
            >
              <IconMock
                className="sc-fcCDYY Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ bKlEMB dpibyo AjyOr icon"
              />
            </button>
          </div>
          <main
            className="sc-fcCDYY Flex___StyledAppBox-SiGEY kbwrte"
            role="main"
          >
            <p
              className="sc-fcCDYY XePuI"
            >
              are-you-sure-to-delete-something
            </p>
          </main>
          <footer
            className="sc-fcCDYY Flex___StyledAppBox-SiGEY bJCsKO frpAOM"
          >
            <div
              className="sc-fcCDYY Flex___StyledAppBox-SiGEY cFBdVw crLbTm"
            >
              <button
                className="sc-fcCDYY Button__ButtonInner-dXfNcJ cwAPzC jjQrje"
                onClick={[Function]}
                type="button"
              >
                cancel
              </button>
              <button
                className="sc-fcCDYY Button__ButtonInner-dXfNcJ cwAPzC gdbOgx"
                onClick={[Function]}
                type="button"
              >
                global.delete
              </button>
            </div>
          </footer>
        </div>
      </div>
    </div>
  </div>,
]
`;
